[gd_scene load_steps=3 format=2]

[ext_resource path="res://interface/landing/Store.gd" type="Script" id=1]
[ext_resource path="res://interface/NinePatchPanel.tscn" type="PackedScene" id=2]

[node name="Panel" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -387.0
margin_top = -232.5
margin_right = 387.0
margin_bottom = 232.5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchPanel" parent="." instance=ExtResource( 2 )]
margin_right = 787.0
margin_bottom = 484.0

[node name="Left" type="Panel" parent="."]
margin_left = 22.0
margin_top = 23.0
margin_right = 435.0
margin_bottom = 450.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconGrid" type="GridContainer" parent="Left"]
margin_right = 409.0
margin_bottom = 412.0
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leave" type="Button" parent="."]
margin_left = 689.441
margin_top = 433.034
margin_right = 743.441
margin_bottom = 453.034
text = "Return"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemName" type="Label" parent="."]
margin_left = 436.752
margin_top = 29.3438
margin_right = 505.752
margin_bottom = 43.3438
text = "ItemName"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyButton" type="Button" parent="."]
margin_left = 574.336
margin_top = 432.747
margin_right = 673.336
margin_bottom = 452.747
text = "Buy"

[node name="up" type="Button" parent="."]
margin_left = 347.476
margin_top = 453.22
margin_right = 383.476
margin_bottom = 473.22
text = "Up"

[node name="down" type="Button" parent="."]
margin_left = 387.476
margin_top = 453.37
margin_right = 435.476
margin_bottom = 473.37
text = "Down"

[node name="desc" type="Label" parent="."]
margin_left = 439.0
margin_top = 65.0
margin_right = 752.0
margin_bottom = 418.0
text = "Ship Desc"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="leave" to="." method="_on_leave_pressed"]
[connection signal="pressed" from="BuyButton" to="." method="_on_BuyButton_pressed"]
[connection signal="pressed" from="up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="down" to="." method="_on_down_pressed"]
